# NiteOsProject

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Kernel/: .clang-format  .gitignore  CMakeLists.txt  DebugFile.map  KernelStruct.map  Makefile  README  README.md  Readme.md  debug_atrikrnl.map  ld_struct  mem.dmp  meson.build
Kernel/decompile/: AddressSpace.txt  ConsoleImpl.txt  TextModePresenterImpl.txt  VideoPresenterImpl.txt
Kernel/inc/: initializer_list
Kernel/inc/acpi/: spec.h
Kernel/inc/arch-x86_64/: apic-timer.h  apic.h  hwcpus.h  hwinst.h  hwinterrupts.h  hwmem.h  hwregs.h  hwtypes.h  iopt.h  smbios.h  tables.h
Kernel/inc/boot-protocols/: limine.h  stivale2.h
Kernel/inc/delightfuls/: main.h
Kernel/inc/mixins/: prerequisites.h  types.h
Kernel/inc/sbrx/: main.h
Kernel/inc/siberix/: hwinst.h  hwports.h  hwtypes.h  khost.h  kmain.h  kservice.h  main.h  panic.h
Kernel/inc/stdcxx/: array-list.h  array.h  bitmap.h  box.h  buffer.h  concepts.h  copy.h  decltype.h  encoding.h  func.h  hash.h  iterator.h  linked-list.h  linked_list.h  list.h  map.h  math.h  move.h  new-delete.h  opt.h  queue.h  range.h  reference.h  refptr.h  result.h  stream.h  string.h  type-traits.h  types.h  uuid.h  vector.h
Kernel/inc/xtra-concurrent/: atomic.h  locks.h  mutex.h  spinlock.h
Kernel/inc/xtra-gfx/: color.h
Kernel/inc/xtra-io/: writer.h
Kernel/inc/xtra-logging/: level.h  logger.h
Kernel/inc/xtra-math/: align.h  div.h  vec.h
Kernel/inc/xtra-net/: protocols.h
Kernel/inc/xtra-reflect/: class.h  property.h  type.h
Kernel/include/: Address  Console.h  Event.h  Kernel  Logger.h  Macros  Resource.h  String  String.h  System.h  Timer.h  address.h  kern.h  macros  string.h  system.h  timer.h
Kernel/include/Device/: Device.h  device
Kernel/include/Drivers/: ACPI.h  AHCI.h  APIC.h  HPET.h  PCI.h
Kernel/include/Fs/: Disk.h  VirtualFileSystem.h  VirtualFs.h
Kernel/include/Init/: BootInfo.h  bootinfo
Kernel/include/Input/: Console.h  KeyCode.h
Kernel/include/Mem/: AddressSpace.h  KMemAlloc.h  MemZone.h  Memory.h  Page.h  SlabAllocator.h  addrspace.h
Kernel/include/Memory/: Memory.h  Page.h  Slub.h
Kernel/include/Proc/: Process.h  Scheduler.h
Kernel/include/Process/: Activity.h  Process.h  Scheduler.h
Kernel/include/Security/: PermissionEnum.h
Kernel/include/User/: Account.h  Profile.h
Kernel/include/Utils/: ArrayList.h  LinkedList.h  List.h  Map.h  Range.h  Spinlock.h
Kernel/include/Video/: TextModePresenter.h  Video.h  VideoOutput.h
Kernel/include/common/: arch.h  cstring.h  format.h  logger.h  operators.h  operators.hpp  printf.h  runtime.hpp  service.hpp  string.h  typedefs.h
Kernel/include/fs/: vfs.h
Kernel/src/: Panic.cc  Panic.cpp  Runtime.cc  String.cpp  System.cc  System.cpp  Timer.cc  panic.cc  system.cc
(+611 files in other folders)
